Commit On Feature-2

--- a/GitPractice/src/app/app.component.html
+++ b/GitPractice/src/app/app.component.html
@@ -5,4 +5,5 @@
 <b>Update on Release-Abby Branch</b>
 <b>Update on github-1</b>
 <b>Update on github</b>
+<b>Update in Feature-2</b>
 <router-outlet></router-outlet>
