--- a/GitPractice/src/app/app.component.html
+++ b/GitPractice/src/app/app.component.html
@@ -4,5 +4,5 @@
 <b>Update on github</b>
 <b>Update on Release-Abby Branch</b>
 <b>Update on github-1</b>
-<b>Update on github</b>
+<b>Update on github</b> <b>Change In Main</b>
 <router-outlet></router-outlet>
