Commit on Feature-4 From Change-1 On Client

--- a/GitPractice/src/app/app.component.html
+++ b/GitPractice/src/app/app.component.html
@@ -4,7 +4,7 @@
 <b>Update on github</b>
 <b>Update on Release-Abby Branch</b>
 <b>Update on github-1...Change 1 In Feature-3-Change 2 In Feature-3</b> 
-<b>Update on github</b>
+<b>Update on github Change 1 In Feature-4 On Client</b>
 <b>Update in Feature-2</b>
 <b>Update on github-1</b><b>Change In Main</b>
 <b>Update on github</b> <b>Change In Main</b>
