Commit For Change 2 On Remote In Main Branch

--- a/GitPractice/src/app/app.component.html
+++ b/GitPractice/src/app/app.component.html
@@ -5,7 +5,7 @@
 <b>Update on Release-Abby Branch</b>
 <b>Update on github-1...Change 1 In Feature-3-Change 2 In Feature-3</b> 
 <b>Update on github Change 1 In Feature-4 On Client-Change 2 In Feature-4 On Client--</b>
-<b>Update in Feature-2-Change 1 On Remote In Main Branch-</b>
+<b>Update in Feature-2-Change 1 On Remote In Main Branch-Change 2 On Remote In Main Branch--</b>
 <b>Update on github-1</b><b>Change In Main</b>
 <b>Update on github</b> <b>Change In Main</b>
 <router-outlet></router-outlet>
